<resources>
    <string name="app_name">shaaredpreference</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="texto1">Ingrese un número Entero</string>
    <string name="texto2">Ingrese un texto</string>
    <string name="texto3">Ingrese un n´mero decimal</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>